trying to get alignment correct

--- a/my-app/src/styles/content.css
+++ b/my-app/src/styles/content.css
@@ -1,13 +1,18 @@
 .headshot {
-    height: 5rem;
-    width: 5rem;
+
 }
 
 .parent {
     text-align: left;
 }
 
-.firstChild {
+.text-child {
+    width: 75%;
     display: inline-block;
     vertical-align: middle;
+}
+
+.img-child {
+    display: inline-block;
+    width: 25%;
 }
